# pyyaml-tag-extensions

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
notebooks/: example-use-tags.ipynb
yamx/: __init__.py  core.py  decorators.py  loaders.py
yates/: __init__.py  core.py  decorators.py  loaders.py
