[tool.poetry]
name = "yamx"
version = "0.1.1"
authors = ["Johannes Hecher"]
readme = "README.md"
packages = [
    { include = "yamx" }
]
description = ""

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0"
omegaconf = "^2.3.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = "^23.1.0"
flake8 = "^6.0.0"
pre-commit = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
